--- a/src/loader/loaders.css
+++ b/src/loader/loaders.css
@@ -1,19 +1,19 @@
 .loader {
     border: 16px solid #f3f3f3;
     border-radius: 50%;
-    border-top: 16px solid #db3734;
-    width: 120px;
-    height: 120px;
+    border-top: 16px solid #656cd1;
+    width: 90px;
+    height: 90px;
     position: absolute;
-    left: 41% !important;
+    left: 46% !important;
     top: 40% !important;
     margin-left: auto;
     -webkit-animation: spin 2s linear infinite;
-    /* Safari */
+   
     animation: spin 2s linear infinite;
 }
 
-/* Safari */
+
 @-webkit-keyframes spin {
     0% {
         -webkit-transform: rotate(0deg);
@@ -33,3 +33,35 @@
         transform: rotate(360deg);
     }
 }
+
+
+/* .loader-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+  }
+  
+  .loader {
+    border: 4px solid #f3f3f3;
+    border-top: 4px solid #3498db;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    animation: spin 2s linear infinite;
+  }
+  
+  @keyframes spin {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  } */
