--- a/src/cssfolder/style_24aug2023.css
+++ b/src/cssfolder/style_24aug2023.css
@@ -787,6 +787,7 @@ nav .nav-area ul li a:hover {
 	position:relative;
 	animation: fadeIn 1s ease-in both;
 	animation-delay: 6s;	
+    margin-left: 56px;
 }
 
 /*********Circle-around************/
@@ -1311,12 +1312,12 @@ transform: rotate(360deg);
     
  .about-btn-1 {
  
-border: 1px solid #0909cc; 
+/* border: 1px solid #0909cc;  */
 color: #0909cc;
 font-size: 15px;
 text-decoration: none;
-margin-top: 23px;
-padding: 14px 110px;
+margin-top: 55px;
+/* padding: 14px 110px; */
 display: inline-block;
 border-radius: 28px;
 font-weight: 600;
