--- a/src/cssfolder/style.css
+++ b/src/cssfolder/style.css
@@ -6332,14 +6332,15 @@ transition: all .3s ease-in-out; */
   margin: 60px 0px 60px 0px;
   width: 1216px;
 }
+
 .poli-11 {
   position: absolute;
-  top: 52%;
+  top: 42%;
   left: 50%;
   z-index: 0;
   transform: translate(-50%, -50%);
   opacity: 0.2;
-  width: 40%;
+  width: 17%;
 }
 .policy-grid-1 ul li {
   margin-bottom: 24px;
@@ -7069,3 +7070,94 @@ transition: all .3s ease-in-out; */
   margin-top: 22px;
   margin-left: 17px;
 }
+
+.upcs {
+  font-size: 18px;
+  text-align: center;
+  padding-top: 110px;
+  font-weight: 500;
+  color: #555555;
+}
+.media-list {
+  padding-left: 0;
+  list-style: none;
+  background: #fff;
+  height: 300px;
+  padding-top: 20px;
+  box-shadow: 2px 7px 16px 12px #1145e91a;
+  border-radius: 10px;
+  
+}
+
+.text-subs{
+  margin-left: 700px !important;
+  margin-top: 15px;
+  color: #f1ff09 !important;
+}
+
+.text-toggle{
+     margin-top: -17px;
+    margin-bottom: 27px;
+}
+
+.btn-subm
+{
+  background: #0014c7;
+    color: #fff;
+    cursor: pointer;
+    border: none;
+    font-size: 16px;
+    font-weight: 500;
+    margin-bottom: 0px;
+}
+
+.part-grid-1 img
+{
+  size:20px;
+}
+
+.overlay
+{
+  margin-left: -23px !important;
+}
+
+.emoji-input .emoji-icon {
+  background-image: unset !important;
+}
+
+.imgdefault {
+  margin-right: 18px;
+}
+
+.rowees {
+  display: flex;
+  align-items: center;
+  gap: 0px;
+}
+.m-bot-new-1 {
+  margin-top: 24px;
+  /* list-style-type: disc !important; */
+}
+.myrs ul li {
+  list-style-type: disclosure-closed !important;
+  margin-bottom: 50px;
+  margin-left: 20px;
+}
+
+.carousel-gallery .swiper-slide .ttemp {
+  display: block;
+  width: 100%;
+  height: 171px;
+  overflow: hidden;
+  position: relative;
+  box-shadow: 3px 2px 20px 0px rgba(0, 0, 0, 0.2);
+  cursor: zoom-in;
+  margin-bottom: 6px;
+}
+
+.carousel-gallery .swiper-slide .image {
+  width: 211px;
+  height: 171px;
+}
+
+
