--- a/src/cssfolder/style.css
+++ b/src/cssfolder/style.css
@@ -3366,23 +3366,28 @@ iframe {
   font-size: 14px;
   font-weight: 600;
   text-decoration: none;
+  margin-top: 10px;
+  margin-left: 4px;
 }
 
 .like i {
   color: #c3c1c1;
   font-size: 18px;
   margin-bottom: 7px;
+  margin-top: 12px;
 }
 
 .like {
   display: flex;
   align-items: center;
   gap: 10px;
+  margin-top: 12px;
 }
 
 .like a i {
   color: #c3c1c1;
   font-size: 18px;
+  margin-top: 12px;
 }
 
 .mainsflexings {
@@ -7161,3 +7166,12 @@ transition: all .3s ease-in-out; */
 }
 
 
+.pointmu:hover
+{
+  cursor: pointer;
+}
+
+.testdanger {
+  margin-top: 6px;
+  margin-left: 1px;
+}
