--- a/src/cssfolder/style.css
+++ b/src/cssfolder/style.css
@@ -777,7 +777,7 @@ nav .nav-area ul li a:hover {
   display: inline-block;
   /* font-size: 45px; */
   /* line-height: 90px; */
-  cursor: pointer;
+  /* cursor: pointer; */
   /* margin: 20px; */
   width: 155px;
   /* height: 175px; */
@@ -7175,3 +7175,4 @@ transition: all .3s ease-in-out; */
   margin-top: 6px;
   margin-left: 1px;
 }
+
