--- a/src/cssfolder/style_24aug2023.css
+++ b/src/cssfolder/style_24aug2023.css
@@ -796,7 +796,7 @@ nav .nav-area ul li a:hover {
     display: inline-block;
     /* font-size: 45px; */
     /* line-height: 90px; */
-    cursor: pointer;
+    /* cursor: pointer; */
     /* margin: 20px; */
     width: 155px;
     /* height: 175px; */
