--- a/src/cssfolder/style.css
+++ b/src/cssfolder/style.css
@@ -7269,3 +7269,9 @@ margin-top: 5px;
   height: 72px !important;
   border-radius: 64% !important;
 }
+
+.textttt
+{
+  margin-left: 1px;
+  padding-top: 7px;
+}
