--- a/src/cssfolder/style.css
+++ b/src/cssfolder/style.css
@@ -3515,6 +3515,13 @@ iframe {
   font-weight: 500;
   border-bottom: 2px solid #828282;
 }
+.add-to-cl:hover {
+  color: blue;
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: 500;
+  border-bottom: 2px solid #828282;
+}
 
 .joins {
   color: black;
@@ -3524,6 +3531,13 @@ iframe {
   border-bottom: 2px solid #828282;
 }
 
+.joins:hover {
+  color: blue;
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: 500;
+  border-bottom: 2px solid #828282;
+}
 .two-btn-flex {
   display: flex;
   align-items: center;
@@ -6872,7 +6886,7 @@ transition: all .3s ease-in-out; */
 .upper-two-btn button {
   background: #0909cc;
   color: white;
-  padding: 10px 10px;
+  padding: 10px 0px;
   text-decoration: none;
   width: 100%;
   display: block;
@@ -6880,7 +6894,17 @@ transition: all .3s ease-in-out; */
   border: none;
 
 }
-
+.btnnew{
+  background: #00925a;
+  border-radius: 20px ;
+}
+.btnnew:hover{
+  border: 1px solid  #00925a;
+  border-radius: 20px ;
+  color: #00925a;
+  background: none;
+  transition: none;
+}
 .unactive {
   background: white !important;
   box-shadow: 2px 2px 10px lightgrey;
