--- a/src/cssfolder/account.css
+++ b/src/cssfolder/account.css
@@ -1,8 +1,8 @@
 
 .eye {
-    position: relative;
-    bottom: 34px;
-    left: 240px;
+    position: absolute;
+    bottom: 11px;
+    right: 20px;
     color: #73807e;
 }
 
@@ -392,7 +392,8 @@ font-weight: 500;
 }
 
 .form-group {
-    padding-top: 8px;
+    padding-top: 28px;
+    position: relative;
 }
 
 .detail-btn {
