--- a/src/cssfolder/style_24aug2023.css
+++ b/src/cssfolder/style_24aug2023.css
@@ -468,7 +468,7 @@ nav .nav-area ul li a:hover {
     margin-top: 20px;
     line-height: 24px;
     width: 100%;
-    text-align: justify !important;
+    text-align: center !important;
 }
 
 .about-grid-2 {
