--- a/src/cssfolder/style.css
+++ b/src/cssfolder/style.css
@@ -3370,10 +3370,13 @@ iframe {
   padding-top: 10px;
 }
 
+
+
 .tru-img {
-  width: 100%;
+  width: 7%;
   padding-top: 16px;
-  height: 438px;
+  height: 50px;
+  font-size: 12.5px;
 }
 
 .like h4 {
@@ -7386,13 +7389,76 @@ span.datecal {
 
 
 
+.box{
+  animation: animName 2s linear infinite;
+  width:5px;
+  height:5px;
+  background:#0091EA;
+  margin:10px;
+}
+
+/* @keyframes animName {
+ 0%{
+    transform: rotate(0deg);
+   }
+100%{
+    transform: rotate(360deg);
+   }
+} */
+
+
+.imgdefault {
+  width: 38px;
+  height: 38px;
+  border-radius: 19px;
+  display: none;
+}
+
+
+.swiper-button-prev, .swiper-button-next {
+  color: red;
+}
 
 
 
 
 
+.swiper-button-next, .swiper-button-prev {
+  /* position: unset !important;  */
+   /* top: unset !important ;
+   width: unset !important ;
+   height: unset !important ; */
+   /* margin-top: unset !important ; */
+   /* z-index: unset !important; */
+   cursor: unset !important ;
+   /* display: unset !important ; */
+   /* align-items: unset !important ; */
+   /* justify-content: unset !important ; */
+   /* color:unset !important ; */
+   background-image: unset !important;
 
-
+   right: 11px;
+   /* bottom: 68px !important; */
+   padding: 0;
+   top: unset;
+   color: black !important;
+   margin-right: 20px;
+   /* background: var(--comp-color);2 */
+   border-radius: 50%;
+   size: 55px;
+   /* width: 30px;
+   height: 30px; */
+   /* display: flex;
+   align-items: center;
+   justify-content: center;
+   cursor: pointer; */
+   transition: all 0.2s ease-in;
+   /* margin-top: 4px;
+        display: flex;
+        align-items: center;
+        margin-bottom: 34px; */
+    margin-top: 59px !important;
+}
 
 
 
