--- a/src/cssfolder/style.css
+++ b/src/cssfolder/style.css
@@ -3372,11 +3372,17 @@ iframe {
 
 
 
-.tru-img {
+.tru-imged {
   width: 7%;
   padding-top: 16px;
   height: 50px;
   font-size: 12.5px;
+} 
+
+
+.tru-img {
+  width: 100%;
+  padding-top: 16px;
 }
 
 .like h4 {
@@ -3384,7 +3390,7 @@ iframe {
   font-size: 14px;
   font-weight: 600;
   text-decoration: none;
-  margin-top: 10px;
+  margin-top: 18px;
   margin-left: 4px;
 }
 
@@ -7052,7 +7058,7 @@ transition: all .3s ease-in-out; */
 }
 
 .sectionra {
-  width: 580px;
+  width: auto;
   height: 230px;
   margin: 82px auto;
   background-color: white;
@@ -7139,6 +7145,7 @@ transition: all .3s ease-in-out; */
   color: black;
   margin-top: 22px;
   margin-left: 17px;
+  width:73px;
 }
 h4.dateevent-sty {
   color: rgb(162, 162, 162);
@@ -7320,7 +7327,7 @@ margin-top: 5px;
 
 .avtorsty-nav {
   width: 50px !important;
-  height: 37.5px !important;
+  height: 50px !important;
   border-radius: 75% !important;
 }
 
@@ -7459,6 +7466,107 @@ span.datecal {
         margin-bottom: 34px; */
     margin-top: 59px !important;
 }
+
+/* .replyBtn :nth-child(2) {
+ display: none !important;
+} */
+/* .replyBtn:nth-of-type(2) {
+  display: none;
+} */
+/* .replyBtn:not(:first-of-type) {
+  display: none;
+} */
+
+/* .replyBtn:not(.replyBtn ~ .replyBtn) {
+  display: none !important;
+}  */
+
+.replySection .replyBtn {
+  display: none;
+}
+
+.dropedit
+{
+  top:-23px !important;
+}
+
+/* .grid-container {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr); 
+  grid-template-rows: repeat(2, 1fr);   
+  gap: 10px; 
+} */
+
+
+.text.textabc{
+   flex-direction: column;
+   display: flex;
+   justify-content: space-between;
+   align-items: baseline
+   ;
+
+}
+
+.title-flex-1 {
+  
+  margin-top: -65px;
+}
+
+
+.sectionra div.img {
+  margin-top: -40px;
+  margin-left: 0px;
+
+}
+
+
+
+
+.title-flex-1 h3 {
+  font-size: 16px;
+  font-weight: 500;
+  margin-top: 0px; 
+}
+
+.download-btn {
+  font-size: 16px;
+  margin-top: 0px;
+}
+
+.sectionra h1 {
+  
+  margin-bottom: 20px;
+}
+.d-flex.gap {
+  gap: 5px;
+  margin-top: 16px;
+}
+
+.css-i9fmh8-MuiBackdrop-root-MuiModal-backdrop {
+  
+  background-color: rgb(0 0 0 / 75%) !important;
+}
+
+.MuiBox-root.css-o0mtic {
+  text-align: center;
+}
+
+.halfDiv {
+  word-break: break-all;
+  margin-bottom: 20px;
+}
+.halfDiv {
+  display: block !important;
+  
+}
+
+
+
+
+
+
+
+
 
 
 
