--- a/src/cssfolder/style.css
+++ b/src/cssfolder/style.css
@@ -6783,6 +6783,7 @@ transition: all .3s ease-in-out; */
   transform: translate(-50%, -50%);
   opacity: 0.2;
   width: 32%;
+  position: relative;
 }
 
 .part-main-parent-grid {
@@ -6953,8 +6954,29 @@ transition: all .3s ease-in-out; */
   display: none;
 }
 
-.imgprofile {
+/* .imgprofile {
   width: 41px !important;
+} */
+
+.imgprofile {
+  width: 52px !important;
+  height: 50px;
+}
+
+.imgprofiles {
+  /* width: 20%; */
+  width: 57px !important;
+  height: 54px;
+  border: 3px solid #0909cc;
+  border-radius: 48px;
+}
+
+.imgprofilenav {
+  /* width: 20%; */
+  width: 44px !important;
+  height: 44px;
+  border: 3px solid #0909cc;
+  border-radius: 48px;
 }
 
 
@@ -6979,7 +7001,7 @@ transition: all .3s ease-in-out; */
 
 .profile-ab {
   position: absolute;
-  top: 3%;
+  top: 1%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
@@ -7560,8 +7582,12 @@ span.datecal {
   
 }
 
-
-
+.limited-lines {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 5;
+  -webkit-box-orient: vertical;
+}
 
 
 
