--- a/src/cssfolder/style.css
+++ b/src/cssfolder/style.css
@@ -3500,7 +3500,8 @@ iframe {
 .event-list {
   font-size: 20px;
   font-weight: 600;
-  padding-top: 30px;
+  padding-top: 75px;
+  
 }
 
 .cards-1 {
@@ -4814,6 +4815,7 @@ button.back-to-top.show:active {
 
 .log-para {
   font-size: 13px !important;
+  margin-top: 25px !important;
 
 }
 
@@ -6902,6 +6904,7 @@ transition: all .3s ease-in-out; */
   justify-content: center;
   gap: 20px;
   margin-bottom: 20px;
+  width:auto;
 
 }
 
@@ -7630,8 +7633,12 @@ padding: 10px 11px;
     display: block;
 }
 
-.discuss-grid-2.width-310 {
+/* .discuss-grid-2.width-310 {
   width: 270px;
+  margin: 0 auto;
+} */
+.discuss-grid-2.width-310 {
+  width: 500px;
   margin: 0 auto;
 }
 span.plus-icon {
@@ -7639,7 +7646,19 @@ span.plus-icon {
   margin-right: 5px;
 }
 
+.underline-style{
+  border-bottom: 2px solid #000;
+  display: inline-block;
+  padding-bottom: 5px;
+}
 
+.text-centAlieng
+{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* height: 100vh; */
+}
 
 
 
